--- a/public/achievements.html
+++ b/public/achievements.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <div id="main-header"></div>
+  <!-- Header Placeholder -->
+  <div id="header-placeholder"></div>
 
   <!-- Main Content -->
   <main class="achievements-container">
@@ -60,13 +60,13 @@
 
   </main>
 
-  <!-- Footer -->
-  <div id="main-footer"></div>
+  <!-- Footer Placeholder -->
+  <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-<link rel="stylesheet" href="header.css">
-<link rel="stylesheet" href="footer.css">
-  <script src="achievements.js"></script>
+  <script src="header.js" defer></script>
+  <script src="footer.js" defer></script>
+  <script src="achievements.js" defer></script>
 
 </body>
 </html>
