--- a/public/header.html
+++ b/public/header.html
@@ -1,42 +1,31 @@
-document.addEventListener("DOMContentLoaded", () => {
-  const headerPlaceholder = document.getElementById("header-placeholder");
-  if(!headerPlaceholder) return;
+<header>
+  <div class="top-bar container">
+    <!-- Site Name Left -->
+    <div class="site-name">
+      <a href="index.html">CourseHub</a>
+    </div>
+  <!-- Search Bar -->
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
+      <button id="searchBtn"><i class="fa fa-search"></i></button>
+    </div>
+    
+    <!-- Navigation -->
+    <nav>
+      <a href="index.html">الرئيسية</a>
+      <a href="courses.html">الدورات</a>
+      <a href="tests.html">الاختبارات</a>
+      <a href="certificates.html">الشهادات</a>
+    </nav>
 
-  headerPlaceholder.innerHTML = `
-    <header class="main-header">
-      <div class="container header-container">
-        <div class="logo">
-          <a href="index.html">CourseHub</a>
-        </div>
+     <!-- Header Actions -->
+    <div class="header-actions">
+      <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
+      <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
+      <a href="login.html" id="login-link">تسجيل الدخول</a>
+      <div id="user-info" class="user-info-container"></div>
+    </div>
+  </div>
 
-        <nav class="main-nav">
-          <ul>
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="courses.html">الدورات</a></li>
-            <li><a href="tests.html">الاختبارات</a></li>
-            <li><a href="certificates.html">الشهادات</a></li>
-          </ul>
-        </nav>
-
-        <div id="headerSearchBar" class="header-search">
-          <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
-          <button id="searchBtn"><i class="fa fa-search"></i></button>
-        </div>
-
-        <div id="user-info" class="user-info"></div>
-        <a href="login.html" id="login-link" class="login-btn">تسجيل الدخول</a>
-
-        <button id="langBtn" class="lang-btn"><i class="fa fa-globe"></i> عربي</button>
-      </div>
-    </header>
-  `;
-
-  // عرض أو إخفاء Search Bar حسب الصفحة
-  const path = window.location.pathname.split("/").pop();
-  const searchBar = document.getElementById("headerSearchBar");
-  if(path === "index.html" || path === "courses.html") {
-    searchBar.style.display = "flex";
-  } else {
-    searchBar.style.display = "none";
-  }
-});
+   
+</header>
