--- a/public/achievements.html
+++ b/public/achievements.html
@@ -17,15 +17,14 @@
 </head>
 <body>
 
-  <!-- Header Placeholder -->
+  <!-- Header -->
   <div id="header-placeholder"></div>
 
   <!-- Main Content -->
   <main class="achievements-container">
-
     <h1 class="page-title">إنجازاتي</h1>
 
-    <!-- Summary -->
+    <!-- Summary Cards -->
     <section class="summary-cards">
       <div class="summary-card">
         <i class="fa fa-graduation-cap"></i>
@@ -57,17 +56,16 @@
       <h2>الدورات المكتملة</h2>
       <div class="courses-list" id="coursesList"></div>
     </section>
-
   </main>
 
-  <!-- Footer Placeholder -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script src="header.js" defer></script>
   <script src="footer.js" defer></script>
   <script src="achievements.js" defer></script>
-  <script src="main.js" defer></script> <!-- يحتوي على User Dropdown و Language Toggle و Search Bar -->
-  
+  <script src="main.js" defer></script>
+
 </body>
 </html>
