--- a/public/achievements.html
+++ b/public/achievements.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنجازاتي | CourseHub</title>
 
   <!-- Header & Footer Styles -->
@@ -17,14 +18,14 @@
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Header Placeholder -->
   <div id="header-placeholder"></div>
 
   <!-- Main Content -->
   <main class="achievements-container">
     <h1 class="page-title">إنجازاتي</h1>
 
-    <!-- Summary Cards -->
+    <!-- Summary -->
     <section class="summary-cards">
       <div class="summary-card">
         <i class="fa fa-graduation-cap"></i>
@@ -58,14 +59,14 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script src="header.js" defer></script>
   <script src="footer.js" defer></script>
   <script src="achievements.js" defer></script>
-  <script src="main.js" defer></script>
-
+  <script src="main.js" defer></script> <!-- يحتوي على User Dropdown و Language Toggle و Search Bar -->
+  
 </body>
 </html>
