--- a/public/achievements.html
+++ b/public/achievements.html
@@ -66,7 +66,7 @@
   <script src="header.js" defer></script>
   <script src="footer.js" defer></script>
   <script src="achievements.js" defer></script>
-  <script src="main.js" defer></script> <!-- يحتوي على User Dropdown و Language Toggle و Search Bar -->
+  <script src="main.js" defer></script> <!-- User Dropdown + Language Toggle + Search Bar -->
   
 </body>
 </html>
