--- a/public/achievements.html
+++ b/public/achievements.html
@@ -2,7 +2,6 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنجازاتي | CourseHub</title>
 
   <!-- Header & Footer Styles -->
@@ -18,14 +17,14 @@
 </head>
 <body>
 
-  <!-- Header Placeholder -->
+  <!-- Header -->
   <div id="header-placeholder"></div>
 
   <!-- Main Content -->
   <main class="achievements-container">
     <h1 class="page-title">إنجازاتي</h1>
 
-    <!-- Summary -->
+    <!-- Summary Cards -->
     <section class="summary-cards">
       <div class="summary-card">
         <i class="fa fa-graduation-cap"></i>
@@ -59,14 +58,14 @@
     </section>
   </main>
 
-  <!-- Footer Placeholder -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script src="header.js" defer></script>
   <script src="footer.js" defer></script>
   <script src="achievements.js" defer></script>
-  <script src="main.js" defer></script> <!-- User Dropdown + Language Toggle + Search Bar -->
-  
+  <script src="main.js" defer></script>
+
 </body>
 </html>
