--- a/public/achievements.html
+++ b/public/achievements.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنجازاتي | CourseHub</title>
 
-  <!-- Header & Footer Styles -->
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
+  <!-- Header & Footer Styles (سيتم تحميلها تلقائيًا عبر main.js) -->
+  <link rel="stylesheet" href="main.css">
 
   <!-- Font & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -63,27 +62,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script>
-    // تحميل الهيدر والفوتر من ملفات خارجية
-    document.addEventListener("DOMContentLoaded", () => {
-      fetch('header.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('header-placeholder').innerHTML = data);
-
-      fetch('footer.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
-
-      // تحديث السنة في الفوتر
-      const yearSpan = document.getElementById("year");
-      if(yearSpan){
-        yearSpan.textContent = new Date().getFullYear();
-      }
-    });
-  </script>
-
+  <!-- main.js يحتوي على تحميل الهيدر والفوتر + وظائف User/Language/Search -->
+  <script src="main.js" defer></script>
   <script src="achievements.js" defer></script>
-  <script src="main.js" defer></script> <!-- يحتوي على User Dropdown و Language Toggle و Search Bar -->
 
 </body>
 </html>
