--- a/public/header.html
+++ b/public/header.html
@@ -1,15 +1,10 @@
 <header>
   <div class="top-bar container">
-    <!-- Site Name Left -->
+    <!-- شعار الموقع -->
     <div class="site-name">
       <a href="index.html">CourseHub</a>
     </div>
-  <!-- Search Bar -->
-    <div class="search-bar">
-      <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
-      <button id="searchBtn"><i class="fa fa-search"></i></button>
-    </div>
-    
+
     <!-- Navigation -->
     <nav>
       <a href="index.html">الرئيسية</a>
@@ -18,7 +13,13 @@
       <a href="certificates.html">الشهادات</a>
     </nav>
 
-     <!-- Header Actions -->
+    <!-- Search Bar -->
+    <div id="headerSearchBar" class="search-bar">
+      <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
+      <button id="searchBtn"><i class="fa fa-search"></i></button>
+    </div>
+
+    <!-- Header Actions -->
     <div class="header-actions">
       <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
       <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
@@ -26,6 +27,4 @@
       <div id="user-info" class="user-info-container"></div>
     </div>
   </div>
-
-   
 </header>
