--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>دوراتي | CourseHub</title>
 
+ <!-- Header & Footer Styles -->
+  <link rel="stylesheet" href="main.css">
+
+  
   <!-- Firebase SDK -->
   <script type="module" src="my-courses.js" defer></script>
 
