--- a/public/achievements.html
+++ b/public/achievements.html
@@ -65,49 +65,30 @@
   <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase SDKs + App Scripts -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics.js";
-    import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js";
-    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore.js";
+    import { firebaseAuth } from './firebase-config.js';
+    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
-      authDomain: "coursehub-23ed2.firebaseapp.com",
-      projectId: "coursehub-23ed2",
-      storageBucket: "coursehub-23ed2.firebasestorage.app",
-      messagingSenderId: "367073521017",
-      appId: "1:367073521017:web:67f5fd3be4c6407247d3a8",
-      measurementId: "G-NJ6E39V9NW"
-    };
+    const db = getFirestore(firebaseAuth.auth.app);
 
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    const provider = new GoogleAuthProvider();
-
-    // تحقق من تسجيل الدخول
-    onAuthStateChanged(auth, async (user) => {
+    // تسجيل الدخول إذا لم يكن موجود
+    firebaseAuth.onAuthStateChanged(firebaseAuth.auth, async (user) => {
       if (!user) {
-        await signInWithPopup(auth, provider);
+        await firebaseAuth.signInWithPopup(firebaseAuth.auth, new firebaseAuth.GoogleAuthProvider());
         return;
       }
 
-      const userDoc = doc(db, "users", user.uid);
-      let progressData = await getDoc(userDoc);
+      const userDocRef = doc(db, "users", user.uid);
+      let userDocSnap = await getDoc(userDocRef);
+      let progressData;
 
-      if (!progressData.exists()) {
+      if (!userDocSnap.exists()) {
         // إنشاء مستند جديد إذا لم يكن موجودًا
-        progressData = {
-          completedCourses: [],
-          certificates: []
-        };
-        await setDoc(userDoc, progressData);
+        progressData = { completedCourses: [], certificates: [] };
+        await setDoc(userDocRef, progressData);
       } else {
-        progressData = progressData.data();
+        progressData = userDocSnap.data();
       }
 
       // --- Summary ---
@@ -160,8 +141,6 @@
     });
   </script>
 
-  <!-- Main JS (Header/Footer + وظائف البحث) -->
   <script src="main.js" defer></script>
-
 </body>
 </html>
