--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -5,54 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>دوراتي | CourseHub</title>
 
- <!-- Header & Footer Styles -->
   <link rel="stylesheet" href="main.css">
-
-  
-  <!-- Firebase SDK -->
-  <script type="module" src="my-courses.js" defer></script>
-
-  <!-- Font & Icons -->
+  <link rel="stylesheet" href="my-courses.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <!-- Page Styles -->
-  <link rel="stylesheet" href="my-courses.css">
-
   <style>
-    header {
-      direction: ltr !important;
-    }
-    .top-bar.container {
-      flex-direction: row !important;
-      justify-content: space-between !important;
-    }
+    header { direction: ltr !important; }
+    .top-bar.container { flex-direction: row !important; justify-content: space-between !important; }
   </style>
 </head>
 <body>
-
-  <!-- Header -->
   <div id="header-placeholder"></div>
 
-  <!-- Main Content -->
   <main class="courses-container">
     <h1 class="page-title">دوراتي</h1>
 
-    <!-- Tabs -->
     <div class="tabs">
       <button class="tab-btn active" data-tab="current">دوراتي الحالية</button>
       <button class="tab-btn" data-tab="completed">دوراتي المنجزة</button>
       <button class="tab-btn" data-tab="favorites">دوراتي المفضلة</button>
     </div>
 
-    <!-- Tab Contents -->
     <div id="current" class="tab-content active"></div>
     <div id="completed" class="tab-content"></div>
     <div id="favorites" class="tab-content"></div>
   </main>
 
-  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
+  <script type="module" src="my-courses.js"></script>
 </body>
 </html>
