--- a/public/achievements.html
+++ b/public/achievements.html
@@ -5,17 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنجازاتي | CourseHub</title>
 
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="achievements.css">
+  <!-- Styles -->
+  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./achievements.css">
+
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
     header { direction: ltr !important; }
-    .top-bar.container { flex-direction: row !important; justify-content: space-between !important; }
+    .top-bar.container {
+      flex-direction: row !important;
+      justify-content: space-between !important;
+    }
   </style>
 </head>
+
 <body>
+
   <div id="header-placeholder"></div>
 
   <main class="achievements-container">
@@ -48,67 +57,9 @@
 
   <div id="footer-placeholder"></div>
 
-  <script type="module">
-    import { firebaseAuth } from './firebase-config.js';
+  <!-- JS -->
+  <script src="./main.js" defer></script>
+  <script type="module" src="./achievements.js"></script>
 
-    const { auth, db, GoogleAuthProvider, signInWithPopup, onAuthStateChanged, doc, getDoc, setDoc } = firebaseAuth;
-
-    async function loginIfNeeded() {
-      return new Promise(resolve => {
-        onAuthStateChanged(auth, async (user) => {
-          if (!user) {
-            const result = await signInWithPopup(auth, new GoogleAuthProvider());
-            resolve(result.user);
-          } else {
-            resolve(user);
-          }
-        });
-      });
-    }
-
-    loginIfNeeded().then(async user => {
-      const userDocRef = doc(db, "users", user.uid);
-      let userDocSnap = await getDoc(userDocRef);
-      let progressData;
-
-      if (!userDocSnap.exists()) {
-        progressData = { completedCourses: [], certificates: [] };
-        await setDoc(userDocRef, progressData);
-      } else {
-        progressData = userDocSnap.data();
-      }
-
-      document.getElementById("completedCourses").textContent = progressData.completedCourses.length;
-      document.getElementById("certificatesCount").textContent = progressData.certificates.length;
-
-      const certList = document.getElementById("certificatesList");
-      certList.innerHTML = progressData.certificates.length === 0 
-        ? "<p>لم تحصل على أي شهادة بعد.</p>"
-        : progressData.certificates.map(cert => `
-            <div class="certificate-card">
-              <a href="${cert.certificateUrl}" download class="download-btn">تحميل</a>
-              <h4>${cert.title}</h4>
-              <span>تاريخ الإصدار: ${cert.issuedAt}</span>
-              <button onclick="window.open('${cert.certificateUrl}', '_blank')">عرض الشهادة</button>
-            </div>
-          `).join("");
-
-      const coursesList = document.getElementById("coursesList");
-      coursesList.innerHTML = progressData.completedCourses.length === 0 
-        ? "<p>لم تكمل أي دورة بعد.</p>"
-        : progressData.completedCourses.map(course => `
-            <div class="course-card">
-              <img src="${course.image}" alt="${course.title}">
-              <div class="course-content">
-                <h4><a href="course.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">${course.title}</a></h4>
-                <span>المدرب: ${course.instructor}</span><br>
-                <span>أكملت في: ${course.completedAt}</span>
-              </div>
-            </div>
-          `).join("");
-    });
-  </script>
-
-  <script src="main.js" defer></script>
 </body>
 </html>
