--- a/public/achievements.html
+++ b/public/achievements.html
@@ -6,8 +6,8 @@
   <title>إنجازاتي | CourseHub</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="./main.css">
-  <link rel="stylesheet" href="./achievements.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="achievements.css">
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
