--- a/public/achievements.html
+++ b/public/achievements.html
@@ -6,7 +6,7 @@
   <title>إنجازاتي | CourseHub</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="achievements.css">
 
   <!-- Fonts & Icons -->
