--- a/public/achievements.html
+++ b/public/achievements.html
@@ -6,21 +6,17 @@
   <title>إنجازاتي | CourseHub</title>
 
   <!-- Styles -->
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="achievements.css">
 
   <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+    rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <style>
-    header { direction: ltr !important; }
-    .top-bar.container {
-      flex-direction: row !important;
-      justify-content: space-between !important;
-    }
-  </style>
 </head>
 
 <body>
@@ -57,8 +53,7 @@
 
   <div id="footer-placeholder"></div>
 
-  <!-- JS -->
-  <script src="./main.js" defer></script>
+  <!-- Scripts -->
   <script type="module" src="./achievements.js"></script>
 
 </body>
