--- a/public/achievements.html
+++ b/public/achievements.html
@@ -54,7 +54,7 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="./achievements.js"></script>
+  <script type="module" src="achievements.js"></script>
 
 </body>
 </html>
