--- a/public/achievements.html
+++ b/public/achievements.html
@@ -54,6 +54,7 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
+   <script src="./main.js" defer></script>
   <script type="module" src="achievements.js"></script>
 
 </body>
