--- a/public/achievements.html
+++ b/public/achievements.html
@@ -8,6 +8,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="achievements.css">
+  <link rel="stylesheet" href="header.css">
 
   <!-- Fonts & Icons -->
   <link
