--- a/public/achievements.html
+++ b/public/achievements.html
@@ -55,7 +55,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-   <script src="./main.js" defer></script>
+  <link rel="stylesheet" href="footer.css">
+<div id="footer-placeholder"></div>
+   <script src="main.js" defer></script>
   <script type="module" src="achievements.js"></script>
 
 </body>
