--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -5,17 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>دوراتي | CourseHub</title>
 
- <!-- Styles -->
+  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="my-courses.css">
   <link rel="stylesheet" href="header.css">
-  
+  <link rel="stylesheet" href="footer.css">
+
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
     header { direction: ltr !important; }
-    .top-bar.container { flex-direction: row !important; justify-content: space-between !important; }
+    .top-bar.container {
+      flex-direction: row !important;
+      justify-content: space-between !important;
+    }
   </style>
 </head>
 <body>
@@ -35,10 +40,10 @@
     <div id="favorites" class="tab-content"></div>
   </main>
 
-  <link rel="stylesheet" href="footer.css">
   <div id="footer-placeholder"></div>
-   <script src="main.js" defer></script>
-  <script type="module" src="my-courses.js"></script>
 
+  <!-- JS -->
+  <script src="main.js" defer></script>
+  <script type="module" src="my-courses.js"></script>
 </body>
 </html>
