--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -17,10 +17,7 @@
 
   <style>
     header { direction: ltr !important; }
-    .top-bar.container {
-      flex-direction: row !important;
-      justify-content: space-between !important;
-    }
+    .top-bar.container { flex-direction: row !important; justify-content: space-between !important; }
   </style>
 </head>
 <body>
