--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -18,6 +18,25 @@
   <style>
     header { direction: ltr !important; }
     .top-bar.container { flex-direction: row !important; justify-content: space-between !important; }
+    .empty-msg {
+      text-align: center;
+      font-size: 16px;
+      color: #666;
+      padding: 30px 0;
+    }
+    .btn-complete {
+      margin-top: 8px;
+      padding: 6px 10px;
+      background: #1c3faa;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    .btn-complete:hover {
+      background: #16468f;
+    }
   </style>
 </head>
 <body>
