--- a/public/courses.html
+++ b/public/courses.html
@@ -112,5 +112,9 @@
 
     loadCourses();
   </script>
+   <link rel="stylesheet" href="footer.css">
+   <div id="footer-placeholder"></div>
+   <script src="main.js" defer></script>
+  
 </body>
 </html>
