--- a/public/add-course.html
+++ b/public/add-course.html
@@ -3,54 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إضافة دورة - CourseHub</title>
+  <title>إضافة دورة | CourseHub</title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="add-course.css">
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <!-- JS -->
-  <script type="module" src="add-course.js" defer></script>
 </head>
 <body>
 
-  <!-- Header -->
-  <div id="header-placeholder"></div>
+<!-- Header -->
+<div id="header-placeholder"></div>
 
-  <main class="container courses-container">
-    <h1 class="page-title">إضافة دورة جديدة</h1>
+<!-- Main Content -->
+<main class="container add-course-container">
+  <h1>إضافة دورة جديدة</h1>
 
-    <form id="addCourseForm" class="course-form">
-      <label>عنوان الدورة:</label>
-      <input type="text" id="title" placeholder="مثال: تطوير الويب للمبتدئين" required>
+  <form id="addCourseForm">
+    <label for="title">عنوان الدورة</label>
+    <input type="text" id="title" placeholder="أدخل عنوان الدورة" required>
 
-      <label>وصف الدورة:</label>
-      <textarea id="description" placeholder="ضع وصفاً مختصراً للدورة" required></textarea>
+    <label for="instructor">اسم المدرب</label>
+    <input type="text" id="instructor" placeholder="أدخل اسم المدرب" required>
 
-      <label>رابط صورة الدورة:</label>
-      <input type="text" id="image" placeholder="ضع رابط الصورة هنا" required>
+    <label for="category">الفئة</label>
+    <select id="category" required>
+      <option value="">اختر الفئة</option>
+      <option value="web">تطوير الويب</option>
+      <option value="ai">الذكاء الاصطناعي</option>
+      <option value="design">التصميم</option>
+    </select>
 
-      <label>الفئة:</label>
-      <select id="category" required>
-        <option value="web">تطوير الويب</option>
-        <option value="ai">الذكاء الاصطناعي</option>
-        <option value="design">التصميم</option>
-      </select>
+    <label for="image">رابط صورة الدورة</label>
+    <input type="url" id="image" placeholder="أدخل رابط صورة الدورة" required>
 
-      <label>محتوى الدورة:</label>
-      <textarea id="content" placeholder="ضع كل درس في سطر جديد" required></textarea>
+    <label for="description">وصف الدورة</label>
+    <textarea id="description" rows="5" placeholder="أدخل وصف الدورة" required></textarea>
 
-      <button type="submit" class="btn">إضافة الدورة</button>
-    </form>
-  </main>
+    <button type="submit" class="btn">إضافة الدورة</button>
+  </form>
+</main>
 
-  <!-- Footer -->
-  <div id="footer-placeholder"></div>
+<!-- Footer -->
+<div id="footer-placeholder"></div>
+
+<!-- JS -->
+<script type="module" src="add-course.js"></script>
 
 </body>
 </html>
