--- a/public/courses.html
+++ b/public/courses.html
@@ -19,11 +19,12 @@
     .card { background: #fff; border-radius: 10px; box-shadow: 0 6px 15px rgba(0,0,0,0.08); overflow: hidden; display: flex; flex-direction: column; }
     .card img { width: 100%; height: 140px; object-fit: cover; }
     .card-content { padding: 15px; flex: 1; display: flex; flex-direction: column; }
-    .card-content h3 { margin: 0 0 10px; font-size: 18px; }
+    .card-content h3 { margin: 0 0 10px; font-size: 18px; cursor: pointer; }
     .card-content p { font-size: 14px; color: #555; flex: 1; }
     .rating { color: #f1c40f; margin-bottom: 8px; }
     .btn { text-decoration: none; padding: 8px 15px; background: #1c3faa; color: #fff; border-radius: 6px; text-align: center; transition: 0.3s; }
     .btn:hover { background: #1451a1; }
+    .empty-msg { text-align: center; font-size: 16px; color: #666; margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -46,10 +47,10 @@
   <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase -->
+  <!-- Firebase + Courses Script -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
@@ -65,32 +66,38 @@
 
     const coursesGrid = document.getElementById('coursesGrid');
     const categoryButtons = document.querySelectorAll('.categories button');
-
     let allCourses = [];
 
+    // تحميل جميع الدورات من Firestore
     async function loadCourses() {
-      const snapshot = await getDocs(collection(db, "courses"));
-      allCourses = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-      renderCourses(allCourses);
+      try {
+        const snapshot = await getDocs(collection(db, "courses"));
+        allCourses = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+        renderCourses(allCourses);
+      } catch (error) {
+        console.error("خطأ في تحميل الدورات:", error);
+        coursesGrid.innerHTML = "<p class='empty-msg'>حدث خطأ أثناء تحميل الدورات.</p>";
+      }
     }
 
+    // عرض الدورات
     function renderCourses(courses) {
       coursesGrid.innerHTML = "";
-      if (courses.length === 0) {
-        coursesGrid.innerHTML = "<p style='text-align:center;'>لا توجد دورات حالياً.</p>";
+      if (!courses || courses.length === 0) {
+        coursesGrid.innerHTML = "<div class='empty-msg'>لا توجد دورات حالياً.</div>";
         return;
       }
 
       courses.forEach(course => {
         const card = document.createElement("div");
         card.className = "card";
-        card.dataset.category = course.category;
+        card.dataset.category = course.category || "all";
         card.innerHTML = `
           <img src="${course.image}" alt="${course.title}">
           <div class="card-content">
-            <h3>${course.title}</h3>
-            <div class="rating">${"★".repeat(Math.floor(course.rating))} <span>(${course.students} طالب)</span></div>
-            <p>${course.description}</p>
+            <h3 onclick="window.location.href='course-detail.html?id=${course.id}'">${course.title}</h3>
+            <div class="rating">${"★".repeat(course.rating || 4)} <span>(${course.students || 0} طالب)</span></div>
+            <p>${course.description || ""}</p>
             <a href="course-detail.html?id=${course.id}" class="btn">عرض الدورة</a>
           </div>
         `;
@@ -98,6 +105,7 @@
       });
     }
 
+    // تصفية الدورات حسب الفئة
     function filterCategory(cat) {
       categoryButtons.forEach(b => b.classList.remove('active'));
       document.querySelector(`[data-category="${cat}"]`).classList.add('active');
@@ -112,9 +120,8 @@
 
     loadCourses();
   </script>
-   <link rel="stylesheet" href="footer.css">
-   <div id="footer-placeholder"></div>
-   <script src="main.js" defer></script>
-  
+
+  <!-- Footer -->
+  <script src="main.js" defer></script>
 </body>
 </html>
